# pyodide-pkg-with-time

./: README.md  index.html  simple.yml
simple/: CMakeLists.txt  mytime.cpp  mytime.h  mytime.i  setup.py
